src/alternatives-panel.scss
$space-tiny: 5px;
$space-small: 10px;
$space-medium: 15px;
$space-large: 20px;
$space-huge: 40px;
$space-massive: 80px;

$font-size-large: 16px;
$font-size: 15px;
$font-size-small: 14px;
$font-size-tiny: 13px;

$panel-background: var(--vscode-dropdown-background);
$border-color: var(--vscode-pickerGroup-border);
$button-background: var(--vscode-button-background);
$button-background-hover: var(--vscode-button-hoverBackground);
$button-foreground: var(--vscode-button-foreground);
$error-color: var(--vscode-errorForeground);
$success-color: var(--vscode-progressBar-background);
$text-color: var(--vscode-foreground);

@keyframes flicker {
    0% {
        opacity: 0.5;
    }

    50% {
        opacity: 0;
    }

    100% {
        opacity: 0.5;
    }
}

.hidden {
    display: none !important;
}

.success-color {
    background-color: $success-color;
    height: 1px;
    width: 1px;
}

h1,
h2,
h3,
h4,
h5,
h6,
p {
    margin: 0;
    padding: 0;
}

a,
button,
.btn {
    cursor: pointer;
}

a:hover,
a:focus {
    text-decoration: none;
}

body {
    padding: 0;
}

input {
    background: var(--vscode-input-background);
    border: solid 1px $border-color;
    color: var(--vscode-input-foreground);
    font-size: $font-size-small !important;
    padding: $space-tiny $space-small;
}

pre {
    font-family: var(--vscode-editor-font-family);
    font-weight: var(--vscode-editor-font-weight);
    font-size: $font-size-large;
}

.btn {
    background: $button-background;
    border: solid 1px $border-color;
    color: $button-foreground;
    font-size: $font-size-small !important;
    padding: $space-tiny $space-small;
}

.btn:hover {
    background: $button-background-hover;
}

a.btn {
    padding-left: 0;
    padding-right: 0;
    text-align: center;
    text-decoration: none;
}

a.btn:hover {
    color: $button-foreground;
}

.alternatives-logo-container {
    display: flex;
    padding: $space-medium;
    align-items: center;
    justify-content: center;

    .listening-indicator {
        animation: flicker 3s ease-in-out infinite;
        background: $button-background;
        border-radius: 8px;
        height: 8px;
        margin-left: $space-small;
        margin-top: $space-tiny;
        width: 8px;
    }

    .alternatives-logo {
        img {
            width: 120px;
        }
    }

    .spacer {
        flex-grow: 2;
    }

    .alternatives-status {
        align-self: flex-end;
        font-family: system-ui;
        font-size: $font-size-tiny;
    }
}

.alternatives-login-buttons {
    .btn {
        display: block;
        margin-bottom: $space-small;
        width: 100%;
    }
}

.alternatives-volume-container {
    align-items: center;
    display: flex;
    padding: 0 $space-medium;

    .alternatives-listen-controls {
        display: flex;
        justify-content: space-around;
    }

    .btn-listen {
        border-right: 0;
        border-top-right-radius: 0;
        border-bottom-right-radius: 0;
        display: block;

        &:focus {
            border-right: 0;
        }
    }

    .btn-menu {
        border-left: 0;
        border-top-left-radius: 0;
        border-bottom-left-radius: 0;
        display: block;
        font-size: 10px;
        outline: 0;
        padding: 2px 8px;
        position: relative;

        i {
            transition: transform 0.2s;
        }

        i.active {
            transform: rotate(180deg) scaleX(-1);
        }

        .menu-dropdown {
            background: $button-background;
            border-top: none;
            left: 0;
            margin-top: $space-tiny;
            opacity: 0;
            position: absolute;
            transition: opacity 0.2s;
            z-index: 2;

            &.active {
                opacity: 1;
            }

            a {
                border-bottom: 1px solid $border-color;
                color: $button-foreground;
                font-size: $font-size-tiny;
                display: block;
                padding: $space-small;
                text-align: left;
                text-decoration: none;

                &:hover,
                &:focus {
                    background: $button-background-hover;
                }
            }
        }
    }

    .alternatives-bar-container {
        flex-grow: 2;
        border: 1px solid $border-color;
        border-top: none;
        margin-left: $space-small;
        height: 6px;

        .alternatives-bar {
            height: 100%;
            transition: width 0.2s;
        }
    }
}

.alternatives-token-container {
    padding: $space-medium;
    padding-top: 0;

    .alternatives-token-text a {
        text-decoration: underline;
    }

    .alternatives-token-controls {
        display: flex;
        margin-bottom: $space-medium;
        padding-top: 0;

        .input-token {
            flex-grow: 2;
        }
    }
}

.alternatives-valid-header,
.alternatives-invalid-header {
    font-size: $font-size-small;
    margin-left: $space-small;
    margin-top: $space-large;
}

.alternatives-valid-list,
.alternatives-invalid-list {
    margin-top: $space-small;
}

.alternative-row {
    border-bottom: solid 1px $border-color;
    color: $text-color;
    display: block;
    font-size: $font-size;
    padding: $space-small;

    &:last-child {
        border: none;
    }

    &:first-child {
        border-top: solid 1px $border-color;
    }

    &.invalid {
        color: $error-color;

        .alternative-number {
            border-color: $error-color;
            color: $error-color;
        }
    }

    &.suggestion {
        opacity: 0.5;
    }

    &.suggestion:hover {
        background: inherit;
    }

    &.suggestion,
    &.success-color-light:hover {
        color: $text-color;
        cursor: default;
    }

    &:not(.invalid):not(.success-color-light):not(.suggestion):hover {
        color: $success-color;

        .alternative-number {
            border-color: $success-color;
            color: $success-color;
        }
    }

    .alternative-row-inner {
        display: flex;
        flex-direction: row;
        align-items: center;

        .alternative-number {
            $size: 16px;

            border: solid 2px $text-color;
            border-radius: 50%;
            color: $text-color;
            font-weight: 600;
            margin-right: $space-small;
            min-height: $size;
            min-width: $size;
            padding: 4px;
            text-align: center;

            .alternative-number-inner {
                // required to center the number in the container
                line-height: $size - 1px;
            }
        }

        .alternative-description {
            // compensate for the (line-height - 1px) in the number
            margin-top: -1px;
            flex-grow: 2;
            overflow: scroll;

            pre.inline {
                display: inline;
                margin: 0;
                margin-left: $space-tiny;
            }

            .alternative-code {
                display: block;
                margin-top: $space-small;

                pre {
                    margin: 0;
                }
            }
        }
    }
}

.alternative-row.has-newline {
    .alternative-number {
        align-self: flex-start;
    }

    .alternative-description {
        margin-top: 2px;
    }
}

.nux {
    background: $panel-background;
    border: solid 1px $border-color;
    border-radius: $space-tiny;
    padding: $space-tiny $space-small $space-small $space-small;
    margin: $space-small;

    p {
        margin-bottom: 1em;
    }

    .nux-progress {
        height: 2px;
        width: 0%;
        margin-bottom: 3px;
    }

    .nux-body {
        font-size: $font-size-small;
        margin-top: $space-tiny;
    }

    .btn-nux-next {
        font-size: $font-size-tiny !important;
        margin-top: $space-medium;
    }
}

.help {
    width: 500px;
    overflow: auto;

    iframe {
        border: none;
        height: 100%;
        width: 100%;
    }
}

